# react-native-turbo-lnd

./: .gitignore  .yarnrc.yml  CONTRIBUTING.md  LICENSE  README.md  binding.gyp  lefthook.yml  package.json  react-native-turbo-lnd.podspec  react-native.config.js  tsconfig.build.json  tsconfig.json
cpp/: CMakeLists.txt  TurboLndModule.cpp  TurboLndModule.h
cpp/liblnd/arm64-v8a/: liblnd.h
cpp/liblnd/x86/: liblnd.h
cpp/utils/: CallbackKeeper.h  PromiseKeeper.h
example/: app.json  buf.gen.yaml  metro.config.js  package.json
example-electron/: package.json  webpack.rules.ts
example-electron/src/: index.html  index.ts  preload.ts  renderer.ts
example/android/: AndroidManifest.xml  classes2.dex  classes3.dex  classes4.dex  gradle.properties  resources.arsc  settings.gradle
example/android/app/: build.gradle
example/ios/: File.swift  Podfile
example/ios/TurboLndExample/: AppDelegate.mm  Info.plist  LaunchScreen.storyboard
example/ios/TurboLndExample.xcodeproj/: project.pbxproj
example/ios/TurboLndExample.xcworkspace/: contents.xcworkspacedata
example/ios/TurboLndExampleTests/: TurboLndExampleTests.m
example/macos/: Podfile
example/macos/TurboLndExample-macOS/: AppDelegate.mm
example/macos/TurboLndExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
ios/: OnLoad.mm
lib/commonjs/: fetch-lnd.js  fetch-lnd.js.map  index.js  index.js.map  setup-text-encoding.js  setup-text-encoding.js.map
lib/commonjs/core/: NativeTurboLnd.js  NativeTurboLnd.js.map
lib/commonjs/mocks/: index.js  index.js.map  responses.js  responses.js.map
lib/commonjs/proto/: lightning_pb.js  lightning_pb.js.map  stateservice_pb.js  stateservice_pb.js.map  walletunlocker_pb.js  walletunlocker_pb.js.map
lib/module/: index.js  index.js.map  setup-text-encoding.js  setup-text-encoding.js.map
lib/module/core/: NativeTurboLnd.js  NativeTurboLnd.js.map
lib/module/mocks/: index.js  index.js.map  responses.js  responses.js.map
lib/module/proto/: lightning_pb.js  lightning_pb.js.map  stateservice_pb.js  stateservice_pb.js.map  walletunlocker_pb.js  (+1 more)
nodejs-cpp-addon/: addon.cc  lnd_functions.h
protoc-generator/: buf.gen.yaml  gen_bindings.sh  merge-proto-files.ts  package.json  protoc-gen-cpp-functions.ts  windows-wrapper.bat
src/: electron.js  fetch-lnd.js  index.ts  setup-text-encoding.ts
src/core/: NativeTurboLnd.ts
src/mocks/: index.ts  responses.ts
src/proto/: lightning_pb.ts  stateservice_pb.ts  walletunlocker_pb.ts
tests/: index.test.ts
(+189 files in other folders)
